thanos/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-readwrite
  namespace: monitoring-testing-october24
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: thanos-readwrite

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: monitoring-testing-october24
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: thanos-query

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-store
  namespace: monitoring-testing-october24
spec:
  ports:
    - port: 9091
      targetPort: 9091
  selector:
    app: thanos-store

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-sidecar
  namespace: monitoring-testing-october24
spec:
  ports:
    - port: 10901
      targetPort: 10901
  selector:
    app: thanos-sidecar

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-compactor
  namespace: monitoring-testing-october24
spec:
  ports:
    - port: 10902
      targetPort: 10902
  selector:
    app: thanos-compactor
