thanos/app/thanos-frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: thanos-frontend
  namespace: monitoring-testing-october24
spec:
  ports:
  - port: 9091
    targetPort: 9091
  selector:
    app: thanos-frontend
