thanos/app/thanos-receiver-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: thanos-receiver
  namespace: monitoring-testing-october24
spec:
  ports:
  - port: 10901
    targetPort: 10901
  selector:
    app: thanos-receiver
