thanos/app/frontend-route.yaml
apiVersion: networking.k8s.io/v1
kind: Route
metadata:
  name: monitoring-testing-october24
  namespace: monitoring-testing-october24
spec:
  host: front.refactored-space-bassoon-6447q4747g5h56rq.github.dev
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: query-frontend
    weight: 100
  wildcardPolicy: None
