thanos/app/receive-route.yaml
apiVersion: networking.k8s.io/v1
kind: Route
metadata:
  name: receive
  namespace: monitoring-testing-october24
spec:
  host: receive.refactored-space-bassoon-6447q4747g5h56rq.github.dev
  port:
    targetPort: remote
  tls:
    termination: edge
  to:
    kind: Service
    name: receive
    weight: 100
  wildcardPolicy: None
